--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@fast-csv/parse": "^4.3.6",
     "aws-sdk": "^2.870.0",
-    "axios": "^0.21.1",
-    "csv-parser": "^3.0.0"
+    "axios": "^0.21.1"
   }
 }
