--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "zip": "zip -r ./dist/deploy.zip ./"
+    "zip": "zip -r deploy.zip ./"
   },
   "keywords": [],
   "author": "",
