--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "zip": "zip -r deploy.zip ./",
+    "zip": "zip -r deploy.zip ./ -x \"*.csv*\"",
     "upload": "aws lambda update-function-code --function-name fyayc --zip-file fileb://deploy.zip",
     "dev": "node index.js"
   },
@@ -15,6 +15,8 @@
   "dependencies": {
     "@fast-csv/parse": "^4.3.6",
     "aws-sdk": "^2.870.0",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
+    "node-fetch": "^2.6.1"
   }
 }
